--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Fault/CurrentFault.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Fault/CurrentFault.xaml
@@ -26,6 +26,7 @@
                 <Setter Property="Foreground" Value="Red" />
             </Style>
         </Grid.Resources>
+        <Line Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" VerticalAlignment="Top" Height="3" Stroke="White"  StrokeThickness="1" X1="0" X2="800" Y1="0" Y2="0"></Line>
         <TextBlock
             Grid.Column="0"
             Foreground="Black"
