--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/HalfAutoModelView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/HalfAutoModelView.xaml
@@ -205,6 +205,8 @@
                                  Grid.Column="2"
                                  Width="84"
                                  Margin="53,8,14,9"
+                                 State="{Binding Model.FaultSate}"
+                                 Command="{Binding Controller.GoToFault}"
                                  Content="{StaticResource StringFault}"
                                  Style="{StaticResource PISNavigationBtnStyle}" />
 
