--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/AutoModelView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/AutoModelView.xaml
@@ -1,18 +1,19 @@
-﻿<UserControl x:Class="Urban.GuiYang.DDU.View.Contents.PIS.AutoModelView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
-             xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Model.Constant"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:interactivity="clr-namespace:MMI.Facility.WPFInfrastructure.Interactivity;assembly=MMI.Facility.WPFInfrastructure"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
-             Background="{StaticResource ContentBackgroundBrush}"
-             d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
-             d:DesignHeight="450"
-             d:DesignWidth="800"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="Urban.GuiYang.DDU.View.Contents.PIS.AutoModelView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
+    xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Model.Constant"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:interactivity="clr-namespace:MMI.Facility.WPFInfrastructure.Interactivity;assembly=MMI.Facility.WPFInfrastructure"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
+    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    Background="{StaticResource ContentBackgroundBrush}"
+    mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="75*" />
@@ -44,62 +45,71 @@
                     <RowDefinition Height="51*" />
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="1"
-                           Grid.Column="0"
-                           Style="{StaticResource PISContentWhiteTextStyle}"
-                           Text="{StaticResource StringModel}" />
+                <TextBlock
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Style="{StaticResource PISContentWhiteTextStyle}"
+                    Text="{StaticResource StringModel}" />
 
-                <Border Grid.Row="1"
-                        Grid.Column="1"
-                        Margin="10,8,26,10"
-                        Panel.ZIndex="-1"
-                        Background="{StaticResource WhiteBrush}"
-                        CornerRadius="9" />
+                <Border
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Margin="10,8,26,10"
+                    Panel.ZIndex="-1"
+                    Background="{StaticResource WhiteBrush}"
+                    CornerRadius="9" />
 
-                <TextBlock Grid.Row="1"
-                           Grid.Column="1"
-                           Style="{StaticResource PISContentBlackTextStyle}"
-                           Text="{StaticResource StringAuto}" />
+                <TextBlock
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Style="{StaticResource PISContentBlackTextStyle}"
+                    Text="{StaticResource StringAuto}" />
 
-                <Border Grid.Row="2"
-                        Grid.RowSpan="4"
-                        Grid.Column="1"
-                        Margin="10,19,26,0"
-                        Panel.ZIndex="-1"
-                        Background="{StaticResource WhiteBrush}"
-                        CornerRadius="9" />
+                <Border
+                    Grid.Row="2"
+                    Grid.RowSpan="4"
+                    Grid.Column="1"
+                    Margin="10,19,26,0"
+                    Panel.ZIndex="-1"
+                    Background="{StaticResource WhiteBrush}"
+                    CornerRadius="9" />
 
 
-                <TextBlock Grid.Row="3"
-                           Grid.Column="0"
-                           Style="{StaticResource PISContentWhiteTextStyle}"
-                           Text="{StaticResource StringNextStation}" />
+                <TextBlock
+                    Grid.Row="3"
+                    Grid.Column="0"
+                    Style="{StaticResource PISContentWhiteTextStyle}"
+                    Text="{StaticResource StringNextStation}" />
 
-                <TextBlock Grid.Row="3"
-                           Grid.Column="1"
-                           Style="{StaticResource PISContentBlackTextStyle}"
-                           Text="{Binding Path=PISViewModel.Model.StationModel.NextStation.Name}" />
+                <TextBlock
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    Style="{StaticResource PISContentBlackTextStyle}"
+                    Text="{Binding Path=PISViewModel.Model.StationModel.NextStation.Name}" />
 
-                <TextBlock Grid.Row="4"
-                           Grid.Column="0"
-                           Style="{StaticResource PISContentWhiteTextStyle}"
-                           Text="{StaticResource StringEndStatiion}" />
+                <TextBlock
+                    Grid.Row="4"
+                    Grid.Column="0"
+                    Style="{StaticResource PISContentWhiteTextStyle}"
+                    Text="{StaticResource StringEndStatiion}" />
 
-                <TextBlock Grid.Row="4"
-                           Grid.Column="1"
-                           Style="{StaticResource PISContentBlackTextStyle}"
-                           Text="{Binding Path=PISViewModel.Model.StationModel.EndStatiion.Name}" />
+                <TextBlock
+                    Grid.Row="4"
+                    Grid.Column="1"
+                    Style="{StaticResource PISContentBlackTextStyle}"
+                    Text="{Binding Path=PISViewModel.Model.StationModel.EndStatiion.Name}" />
 
-                <TextBlock Grid.Row="5"
-                           Grid.Column="0"
-                           Style="{StaticResource PISContentWhiteTextStyle}"
-                           Text="{StaticResource StringOpenDoorLocation}" />
+                <TextBlock
+                    Grid.Row="5"
+                    Grid.Column="0"
+                    Style="{StaticResource PISContentWhiteTextStyle}"
+                    Text="{StaticResource StringOpenDoorLocation}" />
 
-                <TextBlock Grid.Row="5"
-                           Grid.Column="1"
-                           Style="{StaticResource PISContentBlackTextStyle}"
-                           Text="{Binding Path=PISViewModel.Model.StationModel.OpenDoorType,
-                                          Converter={StaticResource OpenDoorTypeToStringConverter}}" />
+                <TextBlock
+                    Grid.Row="5"
+                    Grid.Column="1"
+                    Style="{StaticResource PISContentBlackTextStyle}"
+                    Text="{Binding Path=PISViewModel.Model.StationModel.OpenDoorType, Converter={StaticResource OpenDoorTypeToStringConverter}}" />
             </Grid>
         </Border>
 
@@ -114,20 +124,22 @@
                 <RowDefinition Height="115*" />
             </Grid.RowDefinitions>
 
-            <common:NavigationButton Grid.Row="0"
-                                     Grid.Column="1"
-                                     Margin="6,16,6,6"
-                                     Command="{Binding Path=PISViewModel.Model.NavigateToEmergBroadcastCommand}"
-                                     Content="{StaticResource StringEmergBroad}"
-                                     FontSize="14"
-                                     Style="{StaticResource PISNavigationBtnStyle}" />
+            <common:NavigationButton
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="6,16,6,6"
+                Command="{Binding Path=PISViewModel.Model.NavigateToEmergBroadcastCommand}"
+                Content="{StaticResource StringEmergBroad}"
+                FontSize="14"
+                Style="{StaticResource PISNavigationBtnStyle}" />
 
-            <common:NavigationButton Grid.Row="1"
-                                     Grid.Column="1"
-                                     Margin="6"
-                                     Command="{Binding Path=PISViewModel.Model.NavigateToLocationInfoCommand}"
-                                     Content="{StaticResource StringLocation}"
-                                     Style="{StaticResource PISNavigationBtnStyle}" />
+            <common:NavigationButton
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="6"
+                Command="{Binding Path=PISViewModel.Model.NavigateToLocationInfoCommand}"
+                Content="{StaticResource StringLocation}"
+                Style="{StaticResource PISNavigationBtnStyle}" />
         </Grid>
 
         <Grid Grid.Row="2" Grid.Column="1">
@@ -137,12 +149,13 @@
                 <ColumnDefinition Width="46*" />
                 <ColumnDefinition Width="58*" />
             </Grid.ColumnDefinitions>
-            <common:NavigationButton Grid.Column="1"
-                                     Command="{Binding Path=PISViewModel.Model.NavigateToTypeCommand}"
-                                     CommandParameter="{x:Static constant:PISType.HalfAuto}"
-                                     Content="{StaticResource StringHalfAuto}"
-                                     FontSize="18"
-                                     Style="{StaticResource PISNavigationBtnStyle}">
+            <common:NavigationButton
+                Grid.Column="1"
+                Command="{Binding Path=PISViewModel.Model.NavigateToTypeCommand}"
+                CommandParameter="{x:Static constant:PISType.HalfAuto}"
+                Content="{StaticResource StringHalfAuto}"
+                FontSize="18"
+                Style="{StaticResource PISNavigationBtnStyle}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="PreviewMouseDown">
                         <interactivity:InvokeCommandAction Command="{Binding Path=PISViewModel.Model.HalfAutoCommand}" CommandParameter="1" />
@@ -153,11 +166,12 @@
                 </i:Interaction.Triggers>
             </common:NavigationButton>
 
-            <common:NavigationButton Grid.Column="2"
-                                     Command="{Binding Path=PISViewModel.Model.NavigateToTypeCommand}"
-                                     CommandParameter="{x:Static constant:PISType.Manaul}"
-                                     Content="{StaticResource StringManaul}"
-                                     Style="{StaticResource PISNavigationBtnStyle}">
+            <common:NavigationButton
+                Grid.Column="2"
+                Command="{Binding Path=PISViewModel.Model.NavigateToTypeCommand}"
+                CommandParameter="{x:Static constant:PISType.Manaul}"
+                Content="{StaticResource StringManaul}"
+                Style="{StaticResource PISNavigationBtnStyle}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="PreviewMouseDown">
                         <interactivity:InvokeCommandAction Command="{Binding Path=PISViewModel.Model.ManualCommand}" CommandParameter="1" />
@@ -169,12 +183,15 @@
             </common:NavigationButton>
         </Grid>
 
-        <common:NavigationButton Grid.Row="2"
-                                 Grid.Column="2"
-                                 Width="84"
-                                 Margin="53,8,14,9"
-                                 Content="{StaticResource StringFault}"
-                                 Style="{StaticResource PISNavigationBtnStyle}" />
+        <common:NavigationButton
+            Grid.Row="2"
+            Grid.Column="2"
+            Width="84"
+            Margin="53,8,14,9"
+            Command="{Binding Controller.GoToFault}"
+            Content="{StaticResource StringFault}"
+            State="{Binding Model.FaultSate}"
+            Style="{StaticResource PISNavigationBtnStyle}" />
 
     </Grid>
 </UserControl>
