--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/LocationInfoView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/LocationInfoView.xaml
@@ -1,17 +1,18 @@
-﻿<UserControl x:Class="Urban.GuiYang.DDU.View.Contents.PIS.LocationInfoView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
-             xmlns:constant1="clr-namespace:Urban.GuiYang.DDU.Model.Constant"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:view="clr-namespace:MMI.Facility.WPFInfrastructure.View;assembly=MMI.Facility.WPFInfrastructure"
-             xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
-             d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
-             d:DesignHeight="450"
-             d:DesignWidth="800"
-             Background="{StaticResource ContentBackgroundBrush}"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="Urban.GuiYang.DDU.View.Contents.PIS.LocationInfoView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
+    xmlns:constant1="clr-namespace:Urban.GuiYang.DDU.Model.Constant"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:view="clr-namespace:MMI.Facility.WPFInfrastructure.View;assembly=MMI.Facility.WPFInfrastructure"
+    xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
+    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    Background="{StaticResource ContentBackgroundBrush}"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="77*" />
@@ -23,11 +24,12 @@
             <RowDefinition Height="8*" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="1"
-              view:GridLine.Brush="{StaticResource BlackBrush}"
-              view:GridLine.Style="ShowIfHasControl"
-              view:GridLine.Width="1"
-              view:GridLine.WidthStyle="AllLineSame">
+        <Grid
+            Grid.Row="1"
+            view:GridLine.Brush="{StaticResource BlackBrush}"
+            view:GridLine.Style="ShowIfHasControl"
+            view:GridLine.Width="1"
+            view:GridLine.WidthStyle="AllLineSame">
             <Grid.RowDefinitions>
                 <RowDefinition Height="63*" />
                 <RowDefinition Height="63*" />
@@ -43,10 +45,11 @@
             </Grid.ColumnDefinitions>
 
 
-            <TextBlock Grid.Row="0"
-                       Grid.Column="1"
-                       Grid.ColumnSpan="4"
-                       Style="{StaticResource LocationCenterBlackTextStyle}">
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="1"
+                Grid.ColumnSpan="4"
+                Style="{StaticResource LocationCenterBlackTextStyle}">
                 <TextBlock.Text>
                     <MultiBinding StringFormat="{}{0}{1}">
                         <Binding Source="{StaticResource StringLocation}" />
@@ -55,53 +58,63 @@
                 </TextBlock.Text>
             </TextBlock>
 
-            <TextBlock Grid.Row="1"
-                       Grid.Column="1"
-                       Style="{StaticResource LocationCenterBlackTextStyle}"
-                       Text="{StaticResource StringCurrentStation}" />
-            <TextBlock Grid.Row="1"
-                       Grid.Column="2"
-                       Style="{StaticResource LocationCenterBlackTextStyle}"
-                       Text="{Binding PISViewModel.Model.StationModel.CurrentStation.Name}" />
-            <TextBlock Grid.Row="1"
-                       Grid.Column="3"
-                       Style="{StaticResource LocationCenterBlackTextStyle}"
-                       Text="{StaticResource StringCurrentStationDistance}" />
-            <TextBlock Grid.Row="1"
-                       Grid.Column="4"
-                       Style="{StaticResource LocationCenterBlackTextStyle}"
-                       Text="{Binding Path=PISViewModel.Model.StationModel.CurrentStationDistance,
-                                      StringFormat={}0}" />
-            <TextBlock Grid.Row="2"
-                       Grid.Column="1"
-                       Style="{StaticResource LocationCenterBlackTextStyle}"
-                       Text="{StaticResource StringNextStation}" />
-            <TextBlock Grid.Row="2"
-                       Grid.Column="2"
-                       Style="{StaticResource LocationCenterBlackTextStyle}"
-                       Text="{Binding Path=PISViewModel.Model.StationModel.NextStation.Name}" />
-            <TextBlock Grid.Row="2"
-                       Grid.Column="3"
-                       Style="{StaticResource LocationCenterBlackTextStyle}"
-                       Text="{StaticResource StringNextStationDistance}" />
-            <TextBlock Grid.Row="2"
-                       Grid.Column="4"
-                       Style="{StaticResource LocationCenterBlackTextStyle}"
-                       Text="{Binding Path=PISViewModel.Model.StationModel.NextStationDistance,
-                                      StringFormat={}0}" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="1"
+                Style="{StaticResource LocationCenterBlackTextStyle}"
+                Text="{StaticResource StringCurrentStation}" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="2"
+                Style="{StaticResource LocationCenterBlackTextStyle}"
+                Text="{Binding PISViewModel.Model.StationModel.CurrentStation.Name}" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="3"
+                Style="{StaticResource LocationCenterBlackTextStyle}"
+                Text="{StaticResource StringCurrentStationDistance}" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="4"
+                Style="{StaticResource LocationCenterBlackTextStyle}"
+                Text="{Binding Path=PISViewModel.Model.StationModel.CurrentStationDistance, StringFormat={}0}" />
+            <TextBlock
+                Grid.Row="2"
+                Grid.Column="1"
+                Style="{StaticResource LocationCenterBlackTextStyle}"
+                Text="{StaticResource StringNextStation}" />
+            <TextBlock
+                Grid.Row="2"
+                Grid.Column="2"
+                Style="{StaticResource LocationCenterBlackTextStyle}"
+                Text="{Binding Path=PISViewModel.Model.StationModel.NextStation.Name}" />
+            <TextBlock
+                Grid.Row="2"
+                Grid.Column="3"
+                Style="{StaticResource LocationCenterBlackTextStyle}"
+                Text="{StaticResource StringNextStationDistance}" />
+            <TextBlock
+                Grid.Row="2"
+                Grid.Column="4"
+                Style="{StaticResource LocationCenterBlackTextStyle}"
+                Text="{Binding Path=PISViewModel.Model.StationModel.NextStationDistance, StringFormat={}0}" />
         </Grid>
 
-        <common:NavigationButton Grid.Row="3"
-                                 Width="84"
-                                 Margin="345,0,371,0"
-                                 Command="{Binding Path=PISViewModel.Model.NavigateToTypeCommand}"
-                                 CommandParameter="{x:Static constant1:PISType.Auto}"
-                                 Content="{StaticResource StringReturn}" />
+        <common:NavigationButton
+            Grid.Row="3"
+            Width="84"
+            Margin="345,0,371,0"
+            Command="{Binding Path=PISViewModel.Model.NavigateToTypeCommand}"
+            CommandParameter="{x:Static constant1:PISType.Auto}"
+            Content="{StaticResource StringReturn}" />
 
-        <common:NavigationButton Grid.Row="5"
-                                 Width="84"
-                                 Margin="0,0,15,0"
-                                 HorizontalAlignment="Right"
-                                 Content="{StaticResource StringFault}" />
+        <common:NavigationButton
+            Grid.Row="5"
+            Width="84"
+            Margin="0,0,15,0"
+            HorizontalAlignment="Right"
+            Command="{Binding Controller.GoToFault}"
+            Content="{StaticResource StringFault}"
+            State="{Binding Model.FaultSate}" />
     </Grid>
 </UserControl>
